activity-center seperation - mobile and desktop

--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
                     <!-- sidebar side menu outer border -->
                     <div class="border">
                         <li>
-                            <a href="">
+                            <a href="pages/elearning-quizzes.html">
                                 <span>Quizzes</span>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="pages/elearning-assignments.html">
                                 <span>Assignments</span>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="pages/elearning-materials.html">
                                 <span>Materials</span>
                             </a>
                         </li>
@@ -227,56 +227,6 @@
         <!-- Desktop Version -->
         <div class="content-number">
             +5
-        </div>
-
-
-
-        <!-- Mobile Version -->
-        <div class="term-timing">Fall 2022 - 2023</div>
-
-        <div class="mobile-content">
-
-            <div class="mobile-content__hotkeys">
-                <i class="fa-solid fa-home"></i>
-                <i class="fa-solid fa-book"></i>
-                <i class="fa-solid fa-lock"></i>
-                <i class="fa-solid fa-moon"></i>
-                <i class="fa-solid fa-gear"></i>
-            </div>
-
-            <hr class="mobile-content__seperator">
-
-            <button class="mobile-content__btn">Upload Files</button>
-
-            <button class="mobile-content__uploaded-btn">
-                4 file uploded <i class="fa-solid fa-angle-right"></i>
-            </button>
-
-            <ul class="mobile-content__uploaded-files">
-                <li>
-                    <img src="">
-                    <span>img title here</span>
-                    <i class="fa-solid fa-close"></i>
-                </li>
-
-                <li>
-                    <img src="">
-                    <span>img title here</span>
-                    <i class="fa-solid fa-close"></i>
-                </li>
-
-                <li>
-                    <img src="">
-                    <span>img title here</span>
-                    <i class="fa-solid fa-close"></i>
-                </li>
-
-                <li>
-                    <img src="">
-                    <span>img title here</span>
-                    <i class="fa-solid fa-close"></i>
-                </li>
-            </ul>
         </div>
     </div>
 
@@ -463,6 +413,56 @@
 
         </div>
 
+    </div>
+
+    <div class="activity-center-mobile activity-center-mobile--active">
+         <!-- Mobile Version -->
+         <div class="term-timing">Fall 2022 - 2023</div>
+
+         <div class="mobile-content">
+ 
+             <div class="mobile-content__hotkeys">
+                 <i class="fa-solid fa-home"></i>
+                 <i class="fa-solid fa-book"></i>
+                 <i class="fa-solid fa-lock"></i>
+                 <i class="fa-solid fa-moon"></i>
+                 <i class="fa-solid fa-gear"></i>
+             </div>
+ 
+             <hr class="mobile-content__seperator">
+ 
+             <button class="mobile-content__btn">Upload Files</button>
+ 
+             <button class="mobile-content__uploaded-btn">
+                 4 file uploded <i class="fa-solid fa-angle-right"></i>
+             </button>
+ 
+             <ul class="mobile-content__uploaded-files">
+                 <li>
+                     <img src="">
+                     <span>img title here</span>
+                     <i class="fa-solid fa-close"></i>
+                 </li>
+ 
+                 <li>
+                     <img src="">
+                     <span>img title here</span>
+                     <i class="fa-solid fa-close"></i>
+                 </li>
+ 
+                 <li>
+                     <img src="">
+                     <span>img title here</span>
+                     <i class="fa-solid fa-close"></i>
+                 </li>
+ 
+                 <li>
+                     <img src="">
+                     <span>img title here</span>
+                     <i class="fa-solid fa-close"></i>
+                 </li>
+             </ul>
+         </div>
     </div>
 
     <!-- 6. dialog as a header menus -->
