--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
     </div>
 
-    <div class="activity-center-mobile activity-center-mobile--active">
+    <div class="activity-center-mobile">
          <!-- Mobile Version -->
          <div class="term-timing">Fall 2022 - 2023</div>
 
